# devflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  current_failures.txt  debug_workflow.py  devflow.yaml  dogfood_gitlab_feature.py  failing_tests.txt  pyproject.toml  test_devflow_dogfood.py  test_devflow_dogfood_simple.py  test_fixed_workflow.py  test_integration.py  test_optimized_devflow.py  test_simple_workflow.py  test_workflow.py
.github/workflows/: ci.yml
docs/: Makefile
examples/: devflow.yaml
src/devflow/: __init__.py  __main__.py  exceptions.py
src/devflow/adapters/: __init__.py  base.py
src/devflow/adapters/git/: __init__.py  basic.py
src/devflow/adapters/github/: __init__.py  client.py
src/devflow/agents/: __init__.py  base.py  claude.py  mock.py
src/devflow/cli/: __init__.py  main.py
src/devflow/cli/commands/: __init__.py  autofix.py  cleanup.py  config.py  init.py  monitor.py  process.py  repo.py  status.py  validate.py
src/devflow/core/: __init__.py  agent_context.py  auto_fix.py  ci_parser.py  config.py  continuous_monitor.py  mission_control.py  multi_agent_coordinator.py  state_manager.py  workflow_engine.py
tests/: __init__.py
tests/integration/: test_adapters.py  test_agents.py  test_complete_workflow.py  test_workflow_engine.py
tests/unit/: __init__.py  test_claude_agent.py  test_claude_agent_simple.py  test_cli.py  test_config.py  test_exceptions.py  test_github_adapter.py  test_github_adapter_simple.py  test_state_manager.py  test_workflow_engine.py
